.provarCaches/00D1q0000008b5bEAA/objects/xcdhcm__Payroll_NI_slabs__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This custom setting is used for NI band setting on the basis of tax year.</description>
    <fields>
        <fullName>xcdhcm__NI_bands__c</fullName>
        <description>Used for storing no of bands used for the current tax year.</description>
        <label>NI bands</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Related_NI_API_name__c</fullName>
        <description>Used for storing API name related to band.</description>
        <label>Related NI API name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Related_YTD_NI_API_name__c</fullName>
        <description>Used for storing YTD API name related to band.</description>
        <label>Related YTD NI API name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>xcdhcm__Tax_year__c</fullName>
        <description>Used for storing tax year.</description>
        <label>Tax year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Payroll NI slabs</label>
</CustomObject>